--- a/BART-MODEL-TESTING/templates/news.html
+++ b/BART-MODEL-TESTING/templates/news.html
@@ -20,18 +20,13 @@
         <tr>
             <th>Title</th>
             <th>Summary</th>
-            <th>rouge_1</th>
-            <th>rouge_2</th>
-            <th>rouge_l</th>
+            <th>Link</th>
         </tr>
         {% for news in news_list %}
         <tr>
             <td>{{ news.title }}</td>
             <td>{{ news.summary }}</td>
-            <td>{{ news.rouge_1 }}</td>
-            <td>{{ news.rouge_2 }}</td>
-            <td>{{ news.rouge_l }}</td>
-            <!--<td><a href="{{ news.link }}" target="_blank">Read more</a></td>-->
+            <td><a href="{{ news.link }}" target="_blank">Read more</a></td>
         </tr>
         {% endfor %}
     </table>
